--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^4",
-        "mockery/mockery": "^1.2"
+        "phpunit/phpunit": "^9.5",
+        "mockery/mockery": "^1.5",
+        "symfony/var-dumper": "^5.4"
     },
     "autoload": {
     	"psr-4" : {
